@@ -1,6 +1,12 @@
 # ChangeLog for mail-mta/ssmtp
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/ssmtp/ChangeLog,v 1.67 2008/11/29 20:27:51 dertobi123 Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/ssmtp/ChangeLog,v 1.68 2009/01/17 09:15:12 dertobi123 Exp $
+
+*ssmtp-2.62-r5 (17 Jan 2009)
+
+  17 Jan 2009; Tobias Scherbaum <dertobi123@gentoo.org>
+  +ssmtp-2.62-r5.ebuild:
+  Revbump: Do install ssmtp.conf.5, #255220
 
 *ssmtp-2.62-r4 (29 Nov 2008)
 
